<resources>
    <string name="app_name">meetat</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    //Aplication String
    <string name="nickname">nickname</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="login">Login</string>
    <string name="register">Not registered yet?</string>
    <string name="signup">Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="friends_head">Friends</string>
    <string name="profile_head">Profile</string>
    <string name="search_head">Search</string>

    <string name="error_network_no_connection">No network connection. Please try it later.</string>
</resources>
