<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_horizontal"
    android:foregroundGravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="de.android.meetat.authenticate.RegisterFragment"
    android:nestedScrollingEnabled="false">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="30dp">

                <ImageView
                    android:id="@+id/ic_logo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/logo_colored"/>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp">

                <EditText
                    android:id="@+id/name_for_application"
                    style="@style/TextEditor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_gravity="right"
                    android:gravity="center"
                    android:hint="@string/nickname" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="10dp">

                <EditText
                    android:id="@+id/email_for_application"
                    style="@style/TextEditor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_gravity="right"
                    android:gravity="center"
                    android:hint="@string/email"
                    android:inputType="textWebEmailAddress" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp">

                <EditText
                    android:id="@+id/password_for_application"
                    style="@style/TextEditor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="20dp">

                <Button
                    android:id="@+id/register_button"
                    style="@style/ButtonSyle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:clickable="true"
                    android:text="@string/signup" />
            </FrameLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>
